unpackaged/main/default/objects/Terminal_Request__c/Terminal_Request__c.object-meta.xml
<CustomObject>
    <label>Terminal Request</label>
    <nameField>
        <displayFormat>TR-{0000000}</displayFormat>
        <label>Terminal Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Terminal Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>