unpackaged/main/default/objects/Terminal_Request__c/fields/Automated_Terminal_Request__c.field-meta.xml
<CustomField>
    <fullName>Automated_Terminal_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automated Terminal Request</label>
    <type>Checkbox</type>
</CustomField>