unpackaged/main/default/objects/Terminal_Request__c/fields/Avg_Acquiring_Profit_per_Terminal_Year__c.field-meta.xml
<CustomField>
    <fullName>Avg_Acquiring_Profit_per_Terminal_Year__c</fullName>
    <label>Avg Acquiring Profit per Terminal/Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>