unpackaged/main/default/objects/Terminal_Request__c/fields/Country_of_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Delivery__c</fullName>
    <label>Country of Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Owning_Country</valueSetName>
    </valueSet>
</CustomField>