unpackaged/main/default/objects/Terminal_Request__c/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Terminal Requests</relationshipLabel>
    <relationshipName>Terminal_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>