unpackaged/main/default/objects/Terminal_Request__c/fields/Quantity_PAX__c.field-meta.xml
<CustomField>
    <fullName>Quantity_PAX__c</fullName>
    <inlineHelpText>There must be a minumum of 18 before this request can be submitted.</inlineHelpText>
    <label>Quantity (PAX)</label>
    <summarizedField>Terminal_Detail__c.Quantity_PAX__c</summarizedField>
    <summaryForeignKey>Terminal_Detail__c.Terminal_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>