unpackaged/main/default/objects/Terminal_Request__c/fields/Quantity_PAX_Terminals__c.field-meta.xml
<CustomField>
    <fullName>Quantity_PAX_Terminals__c</fullName>
    <label>Quantity PAX Terminals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>