unpackaged/main/default/objects/Terminal_Request__c/fields/Quantity_PTF__c.field-meta.xml
<CustomField>
    <fullName>Quantity_PTF__c</fullName>
    <label>Quantity (PTF)</label>
    <summarizedField>Terminal_Detail__c.Quantity_PTF__c</summarizedField>
    <summaryForeignKey>Terminal_Detail__c.Terminal_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>