unpackaged/main/default/objects/Terminal_Request__c/fields/Quantity_Vx__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Vx__c</fullName>
    <label>Quantity (Vx)</label>
    <summarizedField>Terminal_Detail__c.Quantity_Vx__c</summarizedField>
    <summaryForeignKey>Terminal_Detail__c.Terminal_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>