unpackaged/main/default/objects/Terminal_Request__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Terminal Requests</relationshipLabel>
    <relationshipName>Terminal_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>