unpackaged/main/default/objects/Terminal_Request__c/recordTypes/Terminal_Request.recordType-meta.xml
<RecordType>
    <fullName>Terminal_Request</fullName>
    <active>true</active>
    <label>Terminal Request</label>
</RecordType>