unpackaged/main/default/objects/Terminal_Request__c/listViews/Merchant_Services_GB_Terminal_Request.listView-meta.xml
<ListView>
    <fullName>Merchant_Services_GB_Terminal_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Merchant Services GB</label>
    <queue>Merchant_Services_GB</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>