unpackaged/main/default/objects/Terminal_Request__c/listViews/Sales_Support_GB_Terminal_Request.listView-meta.xml
<ListView>
    <fullName>Sales_Support_GB_Terminal_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Sales Support GB</label>
    <queue>Sales_Support_GB</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>